2010-06-02  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/44377
	* tree-ssa-structalias.c (find_func_aliases): Fix typo.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@160152 138bc75d-0d04-0410-961f-82ee72b054a4